# dataAnalysis

./: .env.example  .gitignore  README.md  VISUALIZATION_DEBUG_SOLUTION.md  VISUALIZATION_IMPLEMENTATION.md  api_server.py  main.py  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/components/chat/: ChatContainer.tsx  ChatInput.tsx  ChatInterface.tsx  MessageBubble.tsx  PlotlyChart.tsx
frontend/src/components/ui/: plotly-chart.tsx
frontend/src/hooks/: useChatState.ts
frontend/src/types/: chat.ts
scout/: __main__.py  client.py  graph.py
scout/my_mcp/: config.py  mcp_config.json
scout/my_mcp/local_servers/: dataflow.py  datalysis_mcp.py
scout/prompts/: prompts.py  scout.md
